scripts: Run trusty_build_config selftest as pre-upload hook
Bug: 248953748
Change-Id: Id33735133600e4f1eb976f2e9bca33a275c45178

--- a/PREUPLOAD.cfg
+++ b/PREUPLOAD.cfg
@@ -1,5 +1,6 @@
 [Hook Scripts]
 mypy = mypy .
+trusty_build_config_selftest = ./scripts/trusty_build_config.py selftest
 
 [Builtin Hooks]
 clang_format = true
