scripts: Adjust how mypy is invoked as a pre-upload script
Enable pre-upload hook to run type checks on committed files,
running mypy one file at a time instead of for the whole project.

If mypy is run with a directory argument, it is assumed that all
files in that directory and its subdirectories are part of the
same module [0]. This causes errors if a python file with the same
name exists in multiple folders. We instead pass the list of
python scripts that exist in the tree. This sidesteps the issue.

Since script repo hooks can only be a single command, we call
use `sh -c` to run a sequence of commands. Because a commit
can delete files, we filter out any files that do not exist
in the source tree before invoking mypy.

[0] https://mypy.readthedocs.io/en/stable/running_mypy.html#mapping-file-paths-to-modules

Bug: 240356613
Change-Id: Ifcdf07633d270479755ff325c03b83e2f4cd8af5

--- a/PREUPLOAD.cfg
+++ b/PREUPLOAD.cfg
@@ -1,5 +1,15 @@
 [Hook Scripts]
-mypy = mypy .
+# Run mypy on all python scripts that exist in the tree. This will only generate
+# errors and warnings related to the CLs being uploaded as long as all other
+# scripts are already linter clean. However, mypy warnings will be repeated when
+# uploading multiple CLs. This is a known limitation which also affects pylint.
+# https://android.googlesource.com/platform/tools/repohooks/#todo_limitations.
+#
+# We cannot use `find ... -execdir mypy {} +` directly since find does not
+# propagate status codes from the -execXXX family of arguments so we use xargs
+# instead. We also cannot use pipes directly in a hook script so we wrap
+# everything inside a shell command (`sh -c`).
+mypy = sh -c "find . -name '*.py' | xargs -I{} mypy {}"
 trusty_build_config_selftest = ./scripts/trusty_build_config.py selftest
 
 [Builtin Hooks]
